# PC-Health-cleaner

./: .gitignore  Cargo.toml  README.md
release/: pc-health-cleaner.exe.sha256
src/: cleanup.rs  health.rs  integrity.rs  main.rs  models.rs  scanner.rs  storage.rs  updater.rs
