[package]
name = "pc-health-cleaner"
version = "2.0.0"
edition = "2021"

[dependencies]
eframe = "0.29"
egui = "0.29"
rayon = "1.10"
walkdir = "2.5"
blake3 = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "2.2"
chrono = { version = "0.4", features = ["clock"] }
thiserror = "2.0"
sysinfo = "0.32"
home = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
semver = "1.0"
